--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             </div>
             <div class="ct">
               <h4>Injectable CSMA hydrogel microspheres co-Loaded with GLPM nanozyme, dexamethasone, and stem cells for synergistic osteoarthritis</h4>
-              <div class="meta">Xiaochen Feng.†, <b>Ying Fang†</b>, Hongwei Yu, Yicheng Wang, Yunze Xu, Chunxiao Shi, Haike Xia, Ranjith Kumar Kankala, Aizheng Chen, Shibin Wang, Chaoping Fu*. </div>
+              <div class="meta">Xiaochen Feng†, <b>Ying Fang†</b>, Hongwei Yu, Yicheng Wang, Yunze Xu, Chunxiao Shi, Haike Xia, Ranjith Kumar Kankala, Aizheng Chen, Shibin Wang, Chaoping Fu*. </div>
               <div class="labels">
                 <span class="badge">Article</span>
                 <span class="badge">Advanced Science, Under Review</span>
